src/css/style.css
/* Global styles */
body {
  background-color: #141414;
  font-family: "Montserrat", sans-serif;
  color: #fff;
}

.placeholder-color .ace_placeholder {
  color: rgba(255, 255, 255, 0.262); 
  font-size: 17px;
}
/* ----------------------------------------------------------------------------------- */
/* Header styles */
/* Styles for header */
header {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #232931;
  padding: 0.5rem;
  padding-bottom: 0;
}

.logo-title {
  font-weight: 600;
  text-transform: uppercase;
  color: #ffffff;
  font-size: 3rem;
  margin-bottom: 1rem;
  text-align: center;
  font-weight: bold;
  font-family: "Rowdies", cursive;
  letter-spacing: 6px;
}

.navbar {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1.5rem;
}

.nav-link {
  color: #fff;
  text-align: center;
  letter-spacing: 0.5px;
  font-weight: 500;
  text-transform: uppercase;
  transition: all 0.3s ease;
  cursor: pointer;
  font-size: 18px;
  padding: 0.5rem 1rem;
  border-radius: 15px;
  border: 1px solid transparent;
}

.nav-item-html:hover,
.navbar .nav-item-html.active {
  color: #f06529;
  border: 1px solid #f06529;
}

.nav-item-css:hover,
.navbar .nav-item-css.active {
  color: #2965f1;
  border: 1px solid #2965f1;
}

.nav-item-javascript:hover,
.navbar .nav-item-javascript.active {
  color: #f7df1e;
  border: 1px solid #f7df1e;
}

/* ----------------------------------------------------------------------------------- */

/* MAIN Panel CSS */
/* Main styles */
main {
  background-color: #393e46;
  color: #fff;
}

.main-center {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  gap: 0.5rem;
}

.editor {
  width: 60%;
}

.main-bottom,
.main-top {
  display: flex;
  justify-content: space-between;
  padding: 1rem 0;
  width: 59%;
}

.editor-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}
/* buttons */
.guide-button {
  position: absolute;
  margin: 1rem 2rem;
}
/* ----------------------------------------------------------------------------------- */
/* Footer CSS */

/* Footer styles */

footer {
  background-color: #232931;
  padding: 1.5rem 2rem;
  font-family: monospace;
}

.footer-end {
  text-align: center;
  justify-content: center;
  color: #fff;
  font-size: 1.2rem;
}
/* ----------------------------------------------------------------------------------- */
/* -------------Modal------------ */

.modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  color: black;
}

.modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
}

.modal-content {
  max-width: 500px;
  background-color: #fff;
  padding: 20px;
  border: 10px solid #ccc;
  border-radius: 4px;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-size: 18px;
}

.modal-header {
  margin-bottom: 10px;
}

.modal-header h3 {
  margin: 0;
}

.modal-body {
  padding: 10px 0;
  overflow: auto;
}

.modal-footer {
  text-align: right;
}

.modal-footer button {
  margin-left: 10px;
}

/* ----------------------------------------------------------------------------------- */
/* Scores */
.scores-text {
  font-weight: bold;
}

.score{
  font-weight: bold;
}

.fade-in {
  opacity: 1;
  transition: opacity 1s ease-in;
}

.fade-out {
  opacity: 0;
  transition: opacity 1s ease-out;
}

.scores-text.correct {
  animation: celebrate 1.5s ease-in-out infinite,
    blink-green 2s ease-in-out infinite;
}

.scores-text.wrong {
  animation: blink-red 3s ease-in-out infinite;
}
@keyframes celebrate {
  0% {
    transform: rotateZ(0deg);
  }
  12.5% {
    transform: rotateZ(-1deg);
  }
  37.5% {
    transform: rotateZ(1deg);
  }
  62.5% {
    transform: rotateZ(-1deg);
  }
  87.5% {
    transform: rotateZ(1deg);
  }
  100% {
    transform: rotateZ(0deg);
  }
}

@keyframes blink-red {
  0% {
    color: red;
  }
  50% {
    color: white;
  }
  100% {
    color: red;
  }
}

@keyframes blink-green {
  0% {
    color: green;
  }
  50% {
    color: white;
  }
  100% {
    color: green;
  }
}

/* tese */

